Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/CRMfusionDBR101__Scenario_Key__c.object
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <fields>
        <fullName>CRMfusionDBR101__Hash_Index__c</fullName>
        <externalId>true</externalId>
        <label>Hash Index</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Hash__c</fullName>
        <externalId>true</externalId>
        <label>Hash</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Keys__c</fullName>
        <label>Keys</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__ScenarioID__c</fullName>
        <externalId>true</externalId>
        <label>Scenario ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Version__c</fullName>
        <description>Version number for the key storage format in use.  Used internally, do not manually update.</description>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DupeBlocker Scenario Key</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Key Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeBlocker Scenario Keys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>